# cmake-cpp-modules

./: CMakeLists.txt  README.md
src/my_bin/: CMakeLists.txt  my_bin.cpp
src/my_lib/: CMakeLists.txt  my_lib.cpp
